--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   justify-content: center;
   max-width: 600px;
+  row-gap: 10px;
 }
 
 .header {
@@ -27,8 +28,11 @@
 .waveButton {
   cursor: pointer;
   margin-top: 16px;
-  padding: 8px;
+  padding: 12.5px 0px;
   border: 0;
   border-radius: 5px;
-  
+  background-color: var(--off-white);
+  color: var(--off-black);
+  font-size: 15px;
+  font-weight: 500;
 }
