(1) Hide "wave at me" when account is not connected (2) Get all waves after account is linked

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@
   background-color: transparent;
   border: 2px solid var(--off-white);
   color: var(--off-white);
+  margin: 15px 0px 0px 0px;
 }
 
 .totalNumContainer {
